# rgit

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: reuse.yml
.reuse/: dep5
src/: cli.rs  commands.rs  dir_builder.rs  identifiers.rs  ignore.rs  lib.rs  main.rs  objects.rs  paths.rs  storing.rs
src/objects/: blob.rs  commit.rs  head.rs  index.rs  tree.rs
