[package]
name = "rgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha1_smol = "1.0.0"
